# LCEMP

./: .gitignore  CMakeLists.txt
Minecraft.Client/: AbstractTexturePack.cpp  ClientConnection.cpp  CreativeMode.cpp  DemoLevel.cpp  DirtyChunkSorter.h  Extrax64Stubs.cpp  GameRenderer.cpp  Gui.cpp  Input.cpp  KeyboardMouseInput.cpp  KeyboardMouseInput.h  LevelRenderer.cpp  LocalPlayer.cpp  Minecraft.cpp  MinecraftServer.cpp  MobRenderer.cpp  MultiPlayerGameMode.cpp  MultiPlayerLocalPlayer.cpp  PendingConnection.cpp  PlayerChunkMap.cpp  PlayerConnection.cpp  PlayerList.cpp  PlayerRenderer.cpp  ServerPlayer.cpp  extraX64client.h  platform_stubs.cpp  stdafx.h  stubs.cpp
Minecraft.Client/Common/: Console_Utils.cpp  Consoles_App.cpp
Minecraft.Client/Common/Audio/: Consoles_SoundEngine.h  SoundEngine.cpp
Minecraft.Client/Common/GameRules/: GameRuleManager.cpp
Minecraft.Client/Common/Network/: PlatformNetworkManagerStub.cpp
Minecraft.Client/Common/Tutorial/: ChoiceTask.cpp  ControllerTask.cpp  InfoTask.cpp
Minecraft.Client/Common/UI/: IUIScene_AbstractContainerMenu.cpp  IggyCompat.h  UIBackend.cpp  UIBackend.h  UIController.cpp  UIRenderer.cpp  UIRenderer.h  UIScene_AbstractContainerMenu.cpp  UIScene_CreateWorldMenu.cpp  UIScene_Credits.h  UIScene_Intro.cpp  UIScene_LoadMenu.cpp  UIScene_LoadOrJoinMenu.cpp  UIScene_SettingsGraphicsMenu.cpp
Minecraft.Client/Common/XUI/: XUI_DebugSetCamera.cpp
Minecraft.Client/PS3/: PS3_Minecraft.cpp
Minecraft.Client/PS3/Audio/: PS3_SoundEngine.cpp
Minecraft.Client/Windows64/: Windows64_App.cpp  Windows64_Minecraft.cpp  Windows64_PostProcess.h  Windows64_UIController.cpp  Windows64_UIController.h
Minecraft.Client/Windows64/4JLibs/inc/: 4J_Render.h  4J_Storage.h
Minecraft.Client/Windows64/Network/: WinsockNetLayer.cpp  WinsockNetLayer.h
Minecraft.Client/Windows64/Social/: SocialManager.h
Minecraft.Client/Windows64Media/Media/: skinWin.swf
Minecraft.Client/Windows_Libs/Dev/Render/: 4J_Render.cpp  Renderer.h  RendererCore.cpp  RendererState.cpp  RendererTexture.cpp  stdafx.h
Minecraft.Client/Windows_Libs/Dev/Render/libpng/: pngpriv.h
Minecraft.Client/Windows_Libs/Dev/Render/shaders/: compile_shaders.bat  compile_shaders.sh  compressed.vert  forcelod.frag  lighting.vert  projection.frag  screen_clear.frag  screen_clear.vert  screen_space.frag  screen_space.vert  standard.frag  standard.vert  texgen.vert
Minecraft.Client/Xbox/: Resource.h  Xbox_App.cpp
Minecraft.World/: BasicTypeContainers.cpp  Connection.cpp  ConsoleSaveFileSplit.cpp  DirectoryLevelStorage.cpp  Entity.cpp  Hasher.cpp  Level.h  LevelChunk.h  OldChunkStorage.cpp  Player.cpp  StringHelpers.cpp  Tag.cpp  ThreadName.cpp  Villager.cpp  compression.cpp  compression.h  stdafx.h
Minecraft.World/x64headers/: extraX64.h  sal.h
autoresearch-decompiling-4j-render-lib/: gaps.md  report.md  results.tsv  state.md
cmake/: Sources.cmake
extracted_assets/: splashes.txt
lcemp-decompiled-package/: README.txt
lcemp-decompiled-package/4j_render_source/: 4J_Render.h  RendererCBuff.cpp  RendererCore.cpp  RendererMatrix.cpp  RendererVertex.cpp
lcemp-decompiled-package/decompiled_output/: 4J_all_decompiled.c  input_decompiled.c  profile_decompiled.c  ui_decompiled.c
lcemp-decompiled-package/ghidra_scripts/: ghidra_decompile_all.py  ghidra_decompile_by_strings.py  ghidra_dump_symbols.py
tools/: CMakeLists.txt  arc_extractor.cpp  ghidra_apply_lib_symbols.py  ghidra_decompile.py  ghidra_decompile_4j.py
tools/decompiled/output/: 4J_function_index.txt  4J_symbol_reference.txt  all_symbols.txt  render_decompiled.c  storage_decompiled.c  summary.txt
